--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,10 @@
 login/*
 data/cols/*
 *.csv
+data/risk_registry.csv
+output/merged_spp_candidate.csv
+output/risk_status_merged.csv
+output/col_names/risk_status_colnames.csv
+scripts/R/upload_sharepoint.R
+functions/__pycache__/update_funcs.cpython-312.pyc
+functions/__pycache__/airtable_functions.cpython-312.pyc
